--- a/mysite/mysite/template/login.html
+++ b/mysite/mysite/template/login.html
@@ -10,7 +10,7 @@
 
 
     <div id="submit_login">
-        <input id="submit_login_button1" name="submit_login_button" type="submit" value="Connect"/>
+        <input class="welcome_box_add_recipe" name="submit_login_button" type="submit" value="Connect"/>
         <a href= '{% url "register"%}'>Create an account </a>
     </div>
 </form>
