--- a/mysite/mysite/template/logout.html
+++ b/mysite/mysite/template/logout.html
@@ -3,8 +3,8 @@
 {% block bodyId %}logoutPage{% endblock %}
 {% block content %}
 
-<h1 class="welcome_name"> You were successfully logged out! </h1>
-<div class="add_recipe_div" >
+<h1 class="welcome_name"> You were successfully <br> logged out! </h1>
+<div id="logout_div" >
     <a href= '{% url "userlogin" %}'>Back to Login page </a>
 </div>
 
