--- a/mysite/mysite/template/search_ingredients.html
+++ b/mysite/mysite/template/search_ingredients.html
@@ -4,47 +4,39 @@
 {% block content %}
 
 <h1 class="welcome_name"> Search for a specific recipe containing those ingredients: </h1>
-<div class="add_recipe_div" >
+<div class="ingredients_div" >
 
     <form method= "get" class= "InlineForm">
-        <label for="ingredientsSearch1Input"> Ingredient 1: </label>
+        <label class= "label_ingredients" for="ingredientsSearch1Input"> Ingredient 1: </label>
         <input type = "text" name = "ingredientsSearch" id="ingredientsSearch1Input" />
 
-        <label for="ingredientsSearch2Input"> Ingredient 2: </label>
+        <label class= "label_ingredients" for="ingredientsSearch2Input"> Ingredient 2: </label>
         <input type = "text" name = "ingredientsSearch" id="ingredientsSearch2Input" />
 
-        <label for="ingredientsSearch3Input"> Ingredient 3: </label>
+        <label class= "label_ingredients" for="ingredientsSearch3Input"> Ingredient 3: </label>
         <input type = "text" name = "ingredientsSearch" id="ingredientsSearch3Input" />
 
-        <label for="ingredientsSearch4Input"> Ingredient 4: </label>
+        <label class= "label_ingredients" for="ingredientsSearch4Input"> Ingredient 4: </label>
         <input type = "text" name = "ingredientsSearch" id="ingredientsSearch4Input" />
 
-        <label for="ingredientsSearch5Input"> Ingredient 5: </label>
+        <label class= "label_ingredients" for="ingredientsSearch5Input"> Ingredient 5: </label>
         <input type = "text" name = "ingredientsSearch" id="ingredientsSearch5Input" />
         <div class = "add_recipe_buttons_move">
             <input class="welcome_box_add_recipe" type = "submit" value = "Submit" />
-            <a class="welcome_box_add_recipe" href= '{% url "welcome"%}'>Back to Homepage </a>
+            <a href= '{% url "welcome"%}'>Back to Homepage </a>
         </div>
     </form>
-
-
-
-
 </div>
-    <div id="recipe_diplayed">
-
 
         {% for recipe in recipe_with_ingredients %}
-            <p id="offer_cooking"> You could cook: </p>
-            <div  class="display_single_recipe">
-                <form method="post"> {% csrf_token %}
-                    <a class= "welcome_box" href="singlerecipe?RecipeToShow={{recipe.id}}">{{recipe.title}}</a>
-                </form>
+            <div id="recipe_diplayed">
+                <p id="offer_cooking"> You could cook: </p>
+                <div  class="display_single_recipe">
+                    <form method="post"> {% csrf_token %}
+                        <a class= "welcome_box" href="singlerecipe?RecipeToShow={{recipe.id}}">{{recipe.title}}</a>
+                    </form>
+                </div>
             </div>
         {%endfor%}
 
-    </div>
-
-    <div id="page"></div>
-    <!-- /#page -->
 {%endblock%}
