--- a/mysite/mysite/static/css/style2.css
+++ b/mysite/mysite/static/css/style2.css
@@ -14,7 +14,7 @@ html {
     font-family: 'Shadows Into Light', cursive;
     max-width: 700px;
     width: 100%;
-    margin:5% auto 0 auto;
+    margin:5% auto 5% auto;
     border-radius: 6px;
 }
 
@@ -32,7 +32,6 @@ html {
 }
 
 label{
-    float: left;
     width:150px;
     font-family: 'Shadows Into Light', cursive;
     font-size: 23px;
@@ -61,7 +60,7 @@ label{
 
 .errorlist, .helptext{
     color: #C11B17;
-    width:200px;
+    width:400px;
     font-family: 'Shadows Into Light', cursive;
     font-size: 14px;
     clear: both;
@@ -83,7 +82,6 @@ label{
     line-height: 40px;
     display: inline-block;
     font-size: 23px;
-    border: 2px solid;
     border-radius: 6px;
 }
 
@@ -115,7 +113,7 @@ label{
     font-family: 'Shadows Into Light', cursive;
     max-width: 700px;
     width: 100%;
-    margin:5% auto 0 auto;
+    margin:5% auto 5% auto;
     text-align: center;
     border-radius: 6px;
 }
@@ -128,7 +126,6 @@ label{
     line-height: 130px;
     display: inline-block;
     font-size: 40px;
-    border: 2px solid;
     border-radius: 6px;
 }
 
@@ -156,7 +153,7 @@ label{
     max-width: 700px;
     width: 100%;
     height: 550px;
-    margin:5% auto 0 auto;
+    margin:5% auto 5% auto;
     border-radius: 6px;
 
 }
@@ -183,9 +180,6 @@ form p{
     float:left;
     clear:both;
     margin: auto 10% auto 25%;
-
-
-
 }
 
 #create_account_button, {
@@ -204,7 +198,7 @@ form p{
     background: #800080;
     border:0px;
     width:200px;
-    height: 50px;
+    height: 40px;
     line-height: 40px;
     display: inline-block;
     font-size: 23px;
@@ -215,10 +209,11 @@ form p{
     padding: 0;
     display: inline-block;
 
-
 }
 
-
+.welcome_box_add_recipe:hover{
+    background-color: mediumpurple;
+}
 /* single recipe*/
 
 #singleRecipePage {
@@ -226,9 +221,6 @@ form p{
     background-size: cover;
 }
 
-#button_recipe {
-
-}
 
 /* register */
 
@@ -267,14 +259,49 @@ form p{
     font-family: 'Shadows Into Light', cursive;
     max-width: 700px;
     width: 100%;
-    margin:15% auto 0 0;
+    margin:5% auto 0 auto;
     text-align: center;
     border-radius: 6px;
 }
 
+.ingredients_div {
+    background-color: white;
+    font-size: 23px;
+    opacity: 0.85;
+    padding: 30px;
+    font-family: 'Shadows Into Light', cursive;
+    max-width: 700px;
+    width: 100%;
+    height: 300px;
+    margin:5% auto 5% auto;
+    border-radius: 6px;
+}
+
+.label_ingredients{
+    float:left;
+    width:150px;
+    font-family: 'Shadows Into Light', cursive;
+    font-size: 23px;
+    margin: 0 0 20px 0;
+}
 /* logout page */
 
 #logoutPage {
     background:url('../logo/dish_search_ingredients.jpg');
     background-size: cover;
+}
+
+#logout_div{
+    background-color: white;
+    font-size: 23px;
+    opacity: 0.85;
+    padding: 30px;
+    font-family: 'Shadows Into Light', cursive;
+    max-width: 700px;
+    width: 100%;
+    height: 40px;
+    margin:5% auto 5% auto;
+    border-radius: 6px;
+    text-align: center;
+
 }
