--- a/mysite/mysite/template/base.html
+++ b/mysite/mysite/template/base.html
@@ -10,7 +10,7 @@
 
 
     </head>
-    <body id="{%block bodyId %}genericPage{% endblock%}" >
+    <body id="genericPage" >
     <header>
         {% block headerContent %}{%endblock%}
         </header>
@@ -18,6 +18,10 @@
         {% block content %} {% endblock %}
         </section>
         
-        
+        <div Id="copyrights">
+            <a class= "welcome_box" href='https://www.flickr.com/photos/geishaboy500/4318155599/in/photolist-c1KX9b-4qjucr-81wgLr-7tszkF-FSvcp-fy7ffh-395ZzA-71oipw-6zaspC-kMjBe-6fhDhY-niUv9K-atMKRT-7zzFdB-6P9Ar-pjKwi9-2ue7K-ziXL3-9vXqU6-8JC4tb-9gHTha-hoPpk7-medTnH-8kQjsi-7Em6Yc-ozTkeW-82modM-3MpRde-4bp6dd-dYA9Fw-4Nmkvc-7hJQY8-9bRtSK-9bRqzi-5pkyCp-feqspn-7PBoSN-b6jCzi-8BdMFv-8vUXut-7yoBKN-mo74B-bApck-4pnfsd-5JowZ8-6xyAgR-6KkmyX-ooD6a-5vbjZh-c8XdjC/'>"Spices on Pink"</a>
+            by<a class= "welcome_box" href='https://www.flickr.com/photos/geishaboy500/'> THOR, </a>
+            is licenced under<a class= "welcome_box" href='https://creativecommons.org/licenses/by/2.0/'> CC BY 2.0</a>
+        </div>
     </body>
 </html>
