--- a/mysite/mysite/template/login.html
+++ b/mysite/mysite/template/login.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-#{% block title %}Connexion{% endblock %}
+{% block title %}Connexion{% endblock %}
 {% block bodyId %}loginPage{% endblock %}
 {% block content %}
 
