--- a/mysite/mysite/template/welcome.html
+++ b/mysite/mysite/template/welcome.html
@@ -1,7 +1,7 @@
 
 {% extends "base.html" %}
 {% block title %}Accueil{% endblock %}
-{% block bodyId %}welcomePage{% endblock %}
+{% block bodyclass %}Background{% endblock %}
 {% block content %}
 
 <h1 class="welcome_name"> {{user.first_name}} {{user.last_name}},
@@ -29,7 +29,11 @@ Welcome on Soybean! </h1>
 
             </form>
         </div>
+
+
     {%endfor%}
 </div>
+
+
 
 {%endblock%}
